workspace = { members = ["dummy-process"] }
[package]
name = "reclaim-memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["ptrace"] }
small-fixed-array = "0.2.1"
